Fix issue where the footer did not stretch horizontally

--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,12 @@ div{
 
 /*Layout*/
 
+.page-content{
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
 /*Header*/
 
 .header{
@@ -221,7 +227,8 @@ div{
 }
 
 .footer{
-    display: stretch;
+    align-self: stretch;
+    display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 32px;
